Adding additional data

--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 <body>
 
   <!-- Add your site or application content here -->
+
+  <!-- Begin Hero Section -->
+  
   <nav>
+    <ul>
+      <li><a href="">co.Design</a></li>
+      <li><a href="">co.Creator</a></li>
+      <li><a href="">co.Tech</a></li>
+      <li><a href="">co.Impact</a></li>
+    </ul>
   </nav>
 
-
+ <!--Begin Hero Section  -->
 <section class="Hero">
+
 
 </section>
 
